cmake_minimum_required(VERSION 3.7)
project(main)
message(STATUS "ENV{CXXFLAGS}: " "$ENV{CXXFLAGS}")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g")
set(CMAKE_CXX_FLAGS_RELESAE "$ENV{CXXFLAGS} -O3 -g")
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif(NOT CMAKE_BUILD_TYPE)
message(STATUS "CMAKE_BUILD_TYPE: " "${CMAKE_BUILD_TYPE}")
string(TOUPPER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE)
message(STATUS "CMAKE_BUILD_TYPE: " "${CMAKE_BUILD_TYPE}")

if(CMAKE_BUILD_TYPE STREQUAL "DEBUG")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG}")
else(CMAKE_BUILD_TYPE STREQUAL "DEBUG")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELESAE}")
endif(CMAKE_BUILD_TYPE STREQUAL "DEBUG")
file(GLOB SRC_LIST "*.cpp")
message(STATUS "SRC_LIST: " ${SRC_LIST})
add_executable(main ${SRC_LIST})
